llvm/test/tools/llubi/byval_oversize.ll
; NOTE: Assertions have been autogenerated by utils/update_llubi_test_checks.py UTC_ARGS: --version 6
; RUN: not llubi --verbose < %s 2>&1 | FileCheck %s

define void @callee(ptr byval(i32) %p) {
  ret void
}

define void @main() {
  %alloc = alloca i8
  call void @callee(ptr byval(i32) %alloc)
  ret void
}
; CHECK: Entering function: main
; CHECK-NEXT:   %alloc = alloca i8, align 1 => ptr 0x8 [alloc]
; CHECK-NEXT: Stacktrace:
; CHECK-NEXT: #0   call void @callee(ptr byval(i32) %alloc) at @main <stdin>:10
; CHECK-NEXT: Immediate UB detected: Memory access is out of bounds. Accessed size: 4, Address: 0x8, Object base: 0x8, Object size: 1.
; CHECK-NEXT: error: Execution of function 'main' failed.
